# pixel-drawer

./: .gitignore  README.md
misc/wayland-example/: CMakeLists.txt  cmake-wayland-example.cpp  memo.txt  wayland-example.c
pixel/: CMakeLists.txt
pixel/src/: pixel.cpp  pixel_animation.cpp  pixel_animation.h  pixel_common_headers.h  pixel_controller.cpp  pixel_controller.h  pixel_file_manager.cpp  pixel_file_manager.h  pixel_gl_program_manager.cpp  pixel_gl_program_manager.h  pixel_mesh.cpp  pixel_mesh.h  pixel_palette.cpp  pixel_palette.h  pixel_renderer.cpp  pixel_renderer.h  pixel_surface.cpp  pixel_surface.h  pixel_surface_wayland.cpp  pixel_surface_wayland.h  pixel_surface_x11.cpp  pixel_surface_x11.h
sudoku-solver/: sud  sudoku-solver.c
wayland-example/: .connect.c.swp  .wayland-example.c.swp  simple.c  wayland-example.c  wex
x11-example/: x11-example.c
